# shared_boston_winters

./: .cproject  .gitignore  .project  AFILE  CMakeLists.txt  Makefile  Readme.md  libtest.cc  setup.bash  test.cc
include/sbw/: agent_foo.hpp  agent_plugin.hpp  agent_plugin_base.hpp  agents.hpp  plugin.hpp  plugin_manager.hpp  shared_library.hpp
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  agent_foo.cpp  agent_plugin_base.cpp  agents.cpp  plugin.cpp  plugin_manager.cpp  shared_library.cpp
